enabled deployment to k8s